--- a/flexBox.css
+++ b/flexBox.css
@@ -1,7 +1,20 @@
 body {
-    background-color: aqua;
-    background-image: url("https://www.capetown.travel/wp-content/uploads/2018/12/Table_mountain_cable_way_with_lions_head.jpg");
+    height: 100%;
+    width: 100%;
+    margin: 0;
+    padding: 0;
+    left: 0;
+    top: 0;
+    font-size: 100%;
+    background-image: url("https://theholyangelscarlow.files.wordpress.com/2015/07/colorful-background-7-cool-backgrounds.jpg");
     background-size: cover;
+}
+.Intro {
+    background-image: url("https://triptourguide.com/wp-content/uploads/2019/11/table-mountain-south-africa.jpg");
+    height: 40ex;
+    border-radius: 5ex;
+    width: 75%;
+    margin: 0% 15% 0% 15%;
 }
 
 .myphoto {
@@ -10,31 +23,32 @@ body {
     padding: 0% 35% 0%;
     margin-bottom: 1em;
 }
+.container {
+    width: 90%;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
 @media (min-width: 760px) {
     .Intro {
         display: flex;
     }
     .City {
-        display: flex;
+        display: flex;      
     }
     ol {
         display: flex;
         flex: 1;
         margin: 1em;
-        width: 50%;
     }
     .Hist {
         display: flex;
-        flex: 1;
-        text-align: center;
-    
-        
+        flex: 1;     
     }
 }
 h1{
     text-align: start;
-    text-align: center;
-    
+    text-align: center; 
 }
 
 .CityImg {
@@ -52,16 +66,23 @@ td  {
     text-align: left;
     padding: 8px;
 }
-.img1,
-.img2,
-.img3 {
-    width: 25%;
+.img1 {
+    width: 50%;
     border-radius: 10%;
-    margin-bottom: 1em;
+}
+.img2 {
+    width: 50%;
+    border-radius: 10%;
+    height: 50%;
+}
+.img3 {
+    width: 50%;
+    border-radius: 10%;
+    height: 50%;
 }
 .Places {
     display: flex;
-    flex: 5 ;
+    flex: 50%;
     text-align: center;
     width: 100%;
 }
@@ -70,21 +91,48 @@ p {
     width: 50%;
     font-style: s;
 }
-
-.Places:hover {
-    background-color: red;
+.citypar {
+    text-align: center;
+    width: 50%;
+}
+.spanCity {
+    margin: 0% 10% 0%;
+    width: 25%;
 }
 
-.City:hover{
-    background-color: red;
-    border-radius: 1em;
+li {
+        width: 100%;
+    }
+.Fav {
+    position: relative;
     width: 100%;
+    float: left;
+    margin: 0.5rem 2%;
+    min-height: 0.125rem;
 }
-.ForeignL {
-    background-color: red;
-   
+.subjectlist1{
+    margin: 0.5rem 2%;
 }
-.Fav:hover {
-    background-color: red;
-    border-radius: 2em; 
+h3 {
+    font-size: 1.375rem;
+  }
+.sizeHiv {
+    width: 96%;
+    margin: 0.5rem 2%;  
+  }
+.Hist {
+  position: relative;
+  width: 100%;
+  float: left;
+  margin: 0.5rem 2%;
+  min-height: 0.125rem;  
+}
+
+.Imgcol-4 {
+    width:100%;
+}
+.Fav-Hist,
+.ForeignL1,
+.City1 {
+    margin: 0% 15% 0% 15%; 
 }
